--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,12 @@ classifiers=[
 ]
 dependencies = [
     "torch",
-    "transformer-engine@git+https://github.com/NVIDIA/TransformerEngine.git@v1.1",
+    "transformer-engine",
+    # "transformer-engine@git+https://github.com/NVIDIA/TransformerEngine.git@v1.1",
+    # "transformer-engine@git+https://github.com/NVIDIA/TransformerEngine.git@stable",
     "colorlog>=6.7.0",
-    "deepspeed==0.13.1",
+    # "deepspeed==0.13.1",
+    "deepspeed",
     "mpi4py",
 ]
 dynamic = ["version"]
